tests/fixtures/LatestTests/DynamicVariableTests/errors/assign_to_non_variable.fg
/; EXPECT_ERROR: AssignmentToNonVariable
var x = 5
print = 10

